<resources>
    <string name="app_name">My Weather</string>
    <string name="action_settings">Settings</string>
    <string name="city">City</string>
    <string name="getting">Getting…</string>
    <string name="pressure">Pressure</string>
    <string name="threepoint">…</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="no_internet">Internet error</string>
    <string name="feeling_like">feeling like</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="get_weather">Get Weather</string>
    <string name="date">Date</string>
    <string name="tempday">t  Day</string>
    <string name="tempnight">t  Night</string>
    <string name="back">Back</string>
    <string name="error">Error</string>
    <string name="condition">Condition</string>

    <string name="clear">ясно</string>
    <string name="partly_cloudy">малооблачно</string>
    <string name="cloudy">облачно с прояснениями</string>
    <string name="overcast">пасмурно</string>
    <string name="partly_cloudy_and_light_rain">небольшой дождь</string>
    <string name="partly_cloudy_and_rain">дождь</string>
    <string name="overcast_and_rain">сильный дождь</string>
    <string name="overcast_thunderstorms_with_rain">сильный дождь, гроза</string>
    <string name="cloudy_and_light_rain">облачно, небольшой дождь</string>
    <string name="overcast_and_light_rain">пасмурно,небольшой дождь </string>
    <string name="cloudy_and_rain">облачно, дождь</string>
    <string name="overcast_and_wet_snow">дождь со снегом</string>
    <string name="partly_cloudy_and_light_snow">малооблачно, небольшой снег</string>
    <string name="partly_cloudy_and_snow">малооблачно, снег</string>
    <string name="overcast_and_snow">пасмурно, снегопад</string>
    <string name="cloudy_and_light_snow">облачно, небольшой снег</string>
    <string name="overcast_and_light_snow">пасмурно, небольшой снег</string>
    <string name="cloudy_and_snow">облачно, идёт снег</string>
    <string name="wind_dir">Направление ветра:</string>
    <string name="Weather">Погода</string>
    <string name="Error">Ошибка</string>
    <string name="WeatherOffline">Погода Оффлайн</string>
    <string name="Select">Отслеживать</string>
    <string name="UnSelect">Перестать отслеживать</string>
</resources>
